<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:background="@color/light_whiteE"
        android:orientation="vertical">

        <EditText
            android:id="@+id/personal_center_modify_password_original_password_ev"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/original_password"
            android:inputType="textPassword"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_A3"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/personal_center_modify_password_new_password_ev"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_A3"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/password_format"
            android:textColor="@color/gray_A3"
            android:textSize="12dp" />

        <Button
            android:id="@+id/personal_center_modify_password_determine_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/lightestgray"
            android:gravity="center"
            android:text="@string/determine"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>


</LinearLayout>