<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_register_title_bar_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/login_register_title_bar_back_bg_selector" />

        <RadioGroup
            android:id="@+id/login_register_title_bar_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/login_register_title_bar_login_radio_btn"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_launcher22"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@drawable/ic_launcher22" />

            <View
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/login_register_title_bar_register_radio_btn"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_launcher22"
                android:button="@null"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@drawable/ic_launcher22" />

            <View
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2" />
        </RadioGroup>


        <TextView
            android:id="@+id/login_register_title_bar_forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/title_unselected" />

    </RelativeLayout>
</RelativeLayout>