<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher22"
        android:padding="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_register_head_portrait_dialog_item_camera_ll"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/login_register_head_portrait_dialog_item_camera_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/camera"
                android:textColor="@color/dialog_tv"
                android:textSize="18dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/title_unselected" />


        <LinearLayout
            android:id="@+id/login_register_head_portrait_dialog_item_gallery_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/login_register_head_portrait_dialog_item_gallery_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="18dp"
                android:text="@string/gallery"
                android:textColor="@color/dialog_tv"
                android:textSize="18dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/title_unselected" />

        <LinearLayout
            android:id="@+id/login_register_head_portrait_dialog_item_cancel_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/login_register_head_portrait_dialog_item_cancel_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="18dp"
                android:text="@string/cancel"
                android:textColor="@color/dialog_tv"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>